--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 // Initializing the LIFF app with your LIFF ID.
                 // Replace "YOUR_LIFF_ID" with the actual LIFF ID from LINE Developers Console.
                 await liff.init({
-                    liffId: "YOUR_LIFF_ID"
+                    liffId: "2007877136-mM2ZRpe2"
                 });
 
                 // ตรวจสอบว่า LIFF เริ่มต้นสำเร็จหรือไม่
